force-app/main/default/objects/Service_Cloud_Settings__mdt/Service_Cloud_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Service Cloud: Settings</label>
    <pluralLabel>Service Cloud: Settings</pluralLabel>
</CustomObject>