force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Agent_Profile_Names__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Names__c</fullName>
    <defaultValue>&apos;Service Cloud Generic User&apos;</defaultValue>
    <description>This field value is used as constant to identify Service Cloud Agent profiles.</description>
    <label>Agent Profile Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>