force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Case_Team_Roles_Design_Win__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_Roles_Design_Win__c</fullName>
    <description>This field has &quot;;&quot; separated Case Team roles which will be automatically created for design win Cases.</description>
    <label>Case Team Roles: Design Win</label>
    <length>255</length>
    <type>Text</type>
</CustomField>