force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Customer_Profile_Names__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile_Names__c</fullName>
    <defaultValue>&apos;ESP Community User,NVES Community User Non-Admin,NPN Partner Community(LOGIN),NPN Partner Community(NAMED),NPN Tegra Jetson Partner Community(LOGIN)&apos;</defaultValue>
    <description>This field value is used as constant to identify Internal Users vs Customer.</description>
    <label>Customer Profile Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>