force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Default_Asset_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Asset_Contact_ID__c</fullName>
    <label>Default Asset Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>