force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Disable_Trigger_Actions__c.field-meta.xml
<CustomField>
    <fullName>Disable_Trigger_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>STOP: Please DO NOT check this checkbox if you do not understand the impact of it.
Purpose of this flag to use during data migration when user don&apos;t want backend processes like Triggers, Process Builder, Validation Rule etc to RUN. 
Only disables,
1. Triggers: which inherits &quot;NV_TriggerHandler&quot; class
2. Any other processes: If they have used this flag in criteria.</description>
    <inlineHelpText>STOP: Please DO NOT check this checkbox if you do not understand the impact of it.
 
It Disables,
1. Triggers: which inherits &quot;NV_TriggerHandler&quot; class
2. Any other processes: If they have used this flag in criteria.</inlineHelpText>
    <label>Disable Trigger Actions</label>
    <type>Checkbox</type>
</CustomField>