force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/EGX_Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>EGX_Slack_Channel_ID__c</fullName>
    <description>This field is used in process builder responsible to send message to Slack channel for EGX Cases.</description>
    <label>EGX Slack Channel ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>