force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Internal_User_Types__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_Types__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <label>Internal User Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>