force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Link_All_Assets__c.field-meta.xml
<CustomField>
    <fullName>Link_All_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to indicate whether to process all assets or only matching with criteria. It is used in Asset trigger and ESP_LinkAssets_BAT batch job.</description>
    <inlineHelpText>This checkbox is to indicate whether to process all assets or only matching with criteria. It is used in Asset trigger and ESP_LinkAssets_BAT batch job.</inlineHelpText>
    <label>Link All Assets</label>
    <type>Checkbox</type>
</CustomField>