force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/NVIDIA_CORPORATE_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_CORPORATE_ACCOUNT_ID__c</fullName>
    <defaultValue>&apos;0014000000YYLSKAA5&apos;</defaultValue>
    <description>This field is used in Process builder to set default Account ID for Internal Cases.</description>
    <label>NVIDIA CORPORATE ACCOUNT ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>