force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/NVIDIA_Return_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Return_Account_ID__c</fullName>
    <description>This field is used in hold return Assets. Used in Full System RMA code (RMATriggerHelper).</description>
    <label>NVIDIA Return Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>