force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/Placeholder_Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Entitlement_Name__c</fullName>
    <defaultValue>&apos;Placeholder Entitlement - Please Update&apos;</defaultValue>
    <description>This field value is used to set Placeholder Entitlement Name for Business Critical service.</description>
    <label>Placeholder Entitlement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>