force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/SLA_24x7Support_Label__c.field-meta.xml
<CustomField>
    <fullName>SLA_24x7Support_Label__c</fullName>
    <defaultValue>&apos;24x7 Escalated Remote&apos;</defaultValue>
    <description>This field is used to compare support label with Account and Product and find Correct support process.</description>
    <label>SLA: 24x7Support Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>