force-app/main/default/objects/Service_Cloud_Settings__mdt/fields/TAM_Queue__c.field-meta.xml
<CustomField>
    <fullName>TAM_Queue__c</fullName>
    <defaultValue>&apos;TAM_Queue&apos;</defaultValue>
    <description>This field contains API Name of &quot;TAM Queue&quot;. It is used in Case Trigger to set correct queue when Case is escalated.</description>
    <inlineHelpText>This field contains API Name of &quot;TAM Queue&quot;</inlineHelpText>
    <label>TAM Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>